--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,6 +1,7 @@
 ---
 import { Icon } from "astro-icon/components";
 import HeroImage from "~/components/hero-image.astro";
+import BackgroundImage from "~/components/background-image.astro";
 import type { FooterLink } from "~/types";
 
 const links: Array<FooterLink> = [
