--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -4,9 +4,9 @@ import ThemeSwitcher from "~/components/theme-switcher.astro";
 import type { NavItem } from "~/types";
 
 const navItems: Array<NavItem> = [
-  { title: "Features", url: "#features" },
-  { title: "Compatibility", url: "#compatibility" },
-  { title: "Showcase", url: "#showcase" },
+  { title: "recomendations", url: "#recomendations" },
+  { title: "rules", url: "#rules" },
+  { title: "assistance", url: "#assistance" },
 ];
 ---
 
@@ -14,11 +14,6 @@ const navItems: Array<NavItem> = [
   id="page-header"
   class="absolute bottom-0 z-20 flex w-full items-center justify-between border-b border-transparent px-8 py-4 text-white"
 >
-  <a class="flex items-center gap-3 hover:!text-default" href="#">
-    <h1 class="sr-only">Astro</h1>
-    <Icon name="logomark" class="size-10" />
-    <Icon name="wordmark" class="hidden h-4 sm:block" />
-  </a>
   <div>
     <div class="flex items-center gap-6">
       <nav class="hidden sm:block">
@@ -44,6 +39,7 @@ const navItems: Array<NavItem> = [
       </button>
       <ThemeSwitcher />
     </div>
+    <!--Menu desplegable-->
     <div id="menu-modal" class="modal hidden" aria-hidden="true">
       <div class="fixed inset-0 bg-default px-8 py-4 text-default">
         <div class="space-y-4" role="dialog" aria-modal="true">
@@ -57,9 +53,6 @@ const navItems: Array<NavItem> = [
               <Icon name="mdi:close" class="size-8" />
             </button>
           </header>
-          <div class="flex justify-center">
-            <Icon name="logomark" class="size-16" />
-          </div>
           <nav>
             <ul class="flex flex-col">
               {
