--- a/src/components/splash.astro
+++ b/src/components/splash.astro
@@ -1,46 +1,48 @@
 ---
 import { Image } from "astro:assets";
-import { Icon } from "astro-icon/components";
-import astronautImage from "~/assets/astronaut.png";
-import HeroImage from "~/components/hero-image.astro";
-import Starfield from "~/components/starfield.astro";
-import GitHubCorner from "./github-corner.astro";
+import catImage from "~/assets/cat.png";
+import BackgroundImage from "~/components/background-image.astro";
 
-const widths = [450, 800];
+const widths = [256, 256];
 const sizes = "(min-width: 640px) 42vw, 67vw";
 ---
 
-<section class="relative h-full bg-black">
-  <Starfield />
-  <GitHubCorner />
-  <div id="splash-bg-fallback" class="absolute inset-0 hidden opacity-40">
-    <HeroImage />
+<section class="relative h-full">
+  <div class="absolute inset-0 overflow-hidden">
+    <BackgroundImage />
   </div>
-  <div class="relative grid h-full place-items-center sm:grid-cols-2">
-    <h2
-      class="flex flex-col items-center gap-2 self-end sm:gap-4 sm:self-auto sm:justify-self-end"
-    >
-      <Icon name="logomark" class="size-20 text-white md:size-32" />
-      <div
-        class="gradient-text text-center font-extrabold tracking-tighter text-6xl md:text-8xl"
-      >
-        Build fast
-        <br /> websites,
-        <br /> faster.
+  <div class="relative grid h-full place-items-center sm:grid-cols-5 p-6 border border-green-500">
+    <h2 class="flex flex-col items-center gap-2 self-end sm:gap-4 sm:self-auto sm:justify-self-end">
+      <div class="bg-gradient-to-b from-amber-900 to-black bg-clip-text text-transparent text-center font-extrabold tracking-tighter text-6xl md:text-8xl">
+        INFERNO<br /> HALLOWEEN
       </div>
     </h2>
-    <div
-      id="astronaut"
-      class="w-2/3 max-w-3xl self-start sm:w-10/12 sm:self-auto sm:justify-self-start"
-    >
-      <Image
-        class="h-full w-full object-cover"
-        src={astronautImage}
+    <Image
+        class="sm:w-3/4"
+        src={catImage}
         widths={widths}
         sizes={sizes}
         loading="eager"
         alt="A floating astronaut in a space suit"
-      />
+    />
+    <div>
+        <p class="text-center text-gray-950 text-lg sm:text-xl">
+            A party you won't forget or maybe you will, but hey, it's Halloween Party and you're invited!
+        </p>
+        <div class="flex justify-center gap-4 mt-8">
+            <a
+            href="#"
+            class="btn btn-primary"
+            >
+            RSVP
+            </a>
+            <a
+            href="#"
+            class="btn btn-secondary"
+            >
+            More Info
+            </a>
+        </div>
     </div>
   </div>
 </section>
@@ -52,33 +54,3 @@ const sizes = "(min-width: 640px) 42vw, 67vw";
     }
   </style>
 </noscript>
-
-<style>
-  @keyframes float {
-    0% {
-      transform: translate3d(0, 0, 0);
-    }
-
-    100% {
-      transform: translate3d(0, 30px, 0);
-    }
-  }
-
-  #astronaut {
-    animation: float linear 2.5s infinite alternate;
-  }
-
-  @media (prefers-reduced-motion: reduce) {
-    #astronaut {
-      @apply animate-none;
-    }
-
-    :global(#starfield) {
-      @apply hidden;
-    }
-
-    #splash-bg-fallback {
-      @apply block;
-    }
-  }
-</style>
