--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
-import "@fontsource-variable/old-standard-tt";
+import "@fontsource/old-standard-tt";
+import '@fontsource/unifrakturcook'
 import Header from "~/components/header.astro";
 import Footer from "~/components/footer.astro";
 import Splash from "~/components/splash.astro";
