--- a/src/components/splash.astro
+++ b/src/components/splash.astro
@@ -11,38 +11,28 @@ const sizes = "(min-width: 640px) 42vw, 67vw";
   <div class="absolute inset-0 overflow-hidden">
     <BackgroundImage />
   </div>
-  <div class="relative grid h-full place-items-center sm:grid-cols-5 p-6 border border-green-500">
-    <h2 class="flex flex-col items-center gap-2 self-end sm:gap-4 sm:self-auto sm:justify-self-end">
-      <div class="bg-gradient-to-b from-amber-900 to-black bg-clip-text text-transparent text-center font-extrabold tracking-tighter text-6xl md:text-8xl">
-        INFERNO<br /> HALLOWEEN
-      </div>
+  <div class="relative flex flex-col h-full place-items-center p-6">
+    <h2 class="border-4 border-red-500 bg-gradient-to-b from-amber-900 to-black bg-clip-text text-transparent text-center font-extrabold tracking-tighter text-6xl md:text-8xl">
+      INFERNO
     </h2>
     <Image
-        class="sm:w-3/4"
+        class="sm:w-3/4 border-green-500 border-2"
         src={catImage}
         widths={widths}
         sizes={sizes}
         loading="eager"
         alt="A floating astronaut in a space suit"
     />
-    <div>
-        <p class="text-center text-gray-950 text-lg sm:text-xl">
-            A party you won't forget or maybe you will, but hey, it's Halloween Party and you're invited!
+    <div class="text-center border-2 border-amber-800">
+        <h1>
+            COSTUME PARTY
+        </h1>
+        <p>
+            FRIDAY, NOVEMBER 1ST 08:00 PM
         </p>
-        <div class="flex justify-center gap-4 mt-8">
-            <a
-            href="#"
-            class="btn btn-primary"
-            >
-            RSVP
-            </a>
-            <a
-            href="#"
-            class="btn btn-secondary"
-            >
-            More Info
-            </a>
-        </div>
+        <p>
+            1234 MAIN STREET, SAN FRANCISCO
+        </p>
     </div>
   </div>
 </section>
@@ -54,3 +44,9 @@ const sizes = "(min-width: 640px) 42vw, 67vw";
     }
   </style>
 </noscript>
+
+<style>
+    h1 {
+        font-family: "Old Standard TT", serif;
+    }
+</style>
