--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,8 @@
 ---
 import "@fontsource/old-standard-tt";
-import '@fontsource/unifrakturcook'
+import '@fontsource/unifrakturcook';
+import '@fontsource/new-rocker';
+import '@fontsource-variable/grenze-gotisch';
 import Header from "~/components/header.astro";
 import Footer from "~/components/footer.astro";
 import Splash from "~/components/splash.astro";
