--- a/src/components/splash.astro
+++ b/src/components/splash.astro
@@ -2,39 +2,65 @@
 import { Image } from "astro:assets";
 import catImage from "~/assets/cat.png";
 import BackgroundImage from "~/components/background-image.astro";
+import BackgroundMobileImage from "~/components/background-mobile-image.astro";
 
 const widths = [1024, 1024];
-const sizes = "(min-width: 250px) 256px";
 ---
 
 <section class="relative h-full">
-  <div class="absolute inset-0 overflow-hidden">
+  <div class="absolute inset-0 overflow-hidden md:hidden">
+    <BackgroundMobileImage />
+  </div>
+  <div class="absolute inset-0 overflow-hidden hidden md:block">
     <BackgroundImage />
   </div>
-  <div class="relative flex flex-col h-full place-items-center p-6">
-        <h1 class="">
-            INFERNO
-        </h1>
-        <h2>
-            HALLOWEEN
-        </h2>
+  <div class="relative flex flex-col h-full place-items-center py-44">
+    <h1 class="">
+        INFERNO
+    </h1>
+    <h2>
+        HALLOWEEN
+    </h2>
     <Image
-        class="w-2/3 md:w-1/5 border-green-500 border-2"
+        class="w-2/3 md:w-1/5"
         src={catImage}
         widths={widths}
         loading="eager"
         alt="A demon cat"
     />
-    <div class="text-center border-2 border-amber-800">
+    <div>
         <h2>
-            COSTUME PARTY
+            FIESTA DE DISFRACES
         </h2>
-        <p>
-            FRIDAY, NOVEMBER 1ST 08:00 PM
+        <div class="flex items-center border-black border-y-2">
+            <div class="w-1/3">
+                <p>
+                    FRI
+                </p>
+            </div>
+            <div class="w-1/3 border-black border-x-2">
+                <h3>
+                    01
+                </h3>
+            </div>
+            <div class="w-1/3">
+                <p>
+                    NOV
+                </p>
+            </div>
+        </div>
+        <h3>
+            20:00
+        </h3>
+        <p class="-mt-4">
+            Ortiguilla 505, Camino Real
         </p>
-        <p>
-            1234 MAIN STREET, SAN FRANCISCO
-        </p>
+        <h4 class="mt-2">
+            COVER $20 - SHOT DE BIENVENIDA
+        </h4>
+        <h4>
+            CONCURSO DE DISFRACES POR UNA BOTELLA
+        </h4>
     </div>
   </div>
 </section>
@@ -50,7 +76,7 @@ const sizes = "(min-width: 250px) 256px";
 <style>
     h1 {
         color: #000;
-        font-family: "New Rocker";
+        font-family: "New Rocker",cursive;
         font-size: 64px;
         font-style: normal;
         font-weight: 400;
@@ -65,6 +91,31 @@ const sizes = "(min-width: 250px) 256px";
         font-weight: 400;
         line-height: normal;
     }
-    <p>
-
+    h3 {
+        color: #000;
+        text-align: center;
+        font-family: UnifrakturCook,cursive;
+        font-size: 48px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+    }
+    h4 {
+        color: #000;
+        text-align: center;
+        font-family: "Old Standard TT",serif;
+        font-size: 15px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+    }
+    p {
+        color: #000;
+        text-align: center;
+        font-family: "Grenze Gotisch Variable",cursive;
+        font-size: 32px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+    }
 </style>
