Cambios de estilo para corregir medidas

--- a/src/components/splash.astro
+++ b/src/components/splash.astro
@@ -15,10 +15,10 @@ const widths = [1024, 1024];
     <BackgroundImage />
   </div>
   <div class="relative flex flex-col h-full place-items-center py-36">
-    <h1 class="">
+    <h1 class="text-6xl">
         INFERNO
     </h1>
-    <h2>
+    <h2 class="text-2xl">
         HALLOWEEN
     </h2>
     <Image
@@ -29,7 +29,7 @@ const widths = [1024, 1024];
         alt="A demon cat"
     />
     <div>
-        <h2>
+        <h2 class="text-2xl">
             FIESTA DE DISFRACES
         </h2>
         <div class="flex items-center border-black border-y-2">
@@ -77,7 +77,6 @@ const widths = [1024, 1024];
     h1 {
         color: #000;
         font-family: "New Rocker",cursive;
-        font-size: 64px;
         font-style: normal;
         font-weight: 400;
         line-height: normal;
@@ -86,7 +85,6 @@ const widths = [1024, 1024];
         color: #000;
         text-align: center;
         font-family: "Old Standard TT",serif;
-        font-size: 36px;
         font-style: normal;
         font-weight: 400;
         line-height: normal;
