--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -64,13 +64,13 @@ const description =
   <body
     class="h-full overflow-x-hidden bg-default text-default text-base selection:bg-secondary selection:text-white"
   >
-    <Header />
+    <!--<Header />-->
     <Splash />
-    <div class="space-y-24 px-8 py-32">
-      <Recomendations/>
-      <Rules/>
-      <Assistance/>
-    </div>
+    <!--<div class="space-y-24 px-8 py-32">-->
+    <!--  <Recomendations/>-->
+    <!--  <Rules/>-->
+    <!--  <Assistance/>-->
+    <!--</div>-->
     <Footer />
   </body>
 </html>
