--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,49 +1,41 @@
 ---
 import { Icon } from "astro-icon/components";
-import BackgroundImage from "~/components/background-image.astro";
-import type { FooterLink } from "~/types";
-
-const links: Array<FooterLink> = [
-  {
-    url: "https://astro.build/",
-    description: "Astro's official website",
-    icon: "mdi:home",
-  },
-  {
-    url: "https://github.com/mhyfritz/astro-landing-page",
-    description: "View source on GitHub",
-    icon: "fa-brands:github-alt",
-  },
-  {
-    url: "https://astro.build/chat",
-    description: "Astro on Discord",
-    icon: "fa-brands:discord",
-  },
-  {
-    url: "https://twitter.com/astrodotbuild",
-    description: "Astro on Twitter",
-    icon: "fa-brands:twitter",
-  },
-];
+import BackgroundImage from "~/components/background-footer-image.astro";
 ---
 
-<footer class="relative flex h-64 items-center justify-center">
-  <div class="absolute inset-0 overflow-hidden opacity-60">
+<footer class="relative flex h-36 items-center justify-center">
+  <div class="absolute inset-0 overflow-hidden">
     <BackgroundImage />
   </div>
-  <ul class="relative grid grid-cols-2 gap-4 sm:grid-cols-4">
-    {
-      links.map((link) => (
-        <li>
-          <a
-            class="flex size-16 items-center justify-center rounded-full border-2 border-current p-4"
-            href={link.url}
-          >
-            <span class="sr-only">{link.description}</span>
-            <Icon class="size-full" name={link.icon} />
-          </a>
-        </li>
-      ))
-    }
-  </ul>
+  <div class="relative w-1/3">
+    <div class="flex justify-evenly ">
+      <a
+          class="flex size-16 items-center justify-center"
+          href="https://github.com/LurchingDart/INFERNO"
+      >
+        <span class="sr-only">View source on GitHub</span>
+        <Icon class="size-full" name="mdi:github" />
+      </a>
+      <a
+          class="flex size-16 items-center justify-center"
+          href="https://instagram.com/alfxrxz"
+      >
+        <span class="sr-only">
+          Reach me on Instagram
+        </span>
+        <Icon class="size-full" name="mdi:instagram" />
+      </a>
+    </div>
+    <div>
+        <p class="text-center text-white text-xs">
+          Designed by <a href="https://github.com/LurchingDart" class="text-[#863B87]">Luis Alferez</a>
+        </p>
+    </div>
+  </div>
 </footer>
+
+<style>
+  p {
+    font-family: UnifrakturCook;
+  }
+</style>
