--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,19 +3,15 @@ import "@fontsource/old-standard-tt";
 import '@fontsource/unifrakturcook';
 import '@fontsource/new-rocker';
 import '@fontsource-variable/grenze-gotisch';
-import Header from "~/components/header.astro";
 import Footer from "~/components/footer.astro";
 import Splash from "~/components/splash.astro";
-import Recomendations from "~/components/recomendations.astro";
-import Rules from "~/components/rules.astro";
-import Assistance from "~/components/assistance.astro";
 
 import "~/styles/index.css";
 
 const { generator, site } = Astro;
 const image = new URL("social.jpg", site);
 const description =
-  "INFERNO HALLOWEN - A party you won't forget or maybe you will, but hey, it's Halloween Party and you're invited!";
+  "INFERNO HALLOWEEN - Una fiesta de disfraces en Ortiguilla 505, Camino Real. Cover $20 - Shot de bienvenida.";
 ---
 
 <!doctype html>
@@ -64,13 +60,7 @@ const description =
   <body
     class="h-full overflow-x-hidden bg-default text-default text-base selection:bg-secondary selection:text-white"
   >
-    <!--<Header />-->
     <Splash />
-    <!--<div class="space-y-24 px-8 py-32">-->
-    <!--  <Recomendations/>-->
-    <!--  <Rules/>-->
-    <!--  <Assistance/>-->
-    <!--</div>-->
     <Footer />
   </body>
 </html>
