cambios de estilo para corregir medidas

--- a/src/components/splash.astro
+++ b/src/components/splash.astro
@@ -14,7 +14,7 @@ const widths = [1024, 1024];
   <div class="absolute inset-0 overflow-hidden hidden md:block">
     <BackgroundImage />
   </div>
-  <div class="relative flex flex-col h-full place-items-center py-36">
+  <div class="relative flex flex-col h-full place-items-center py-32">
     <h1 class="text-6xl">
         INFERNO
     </h1>
@@ -22,7 +22,7 @@ const widths = [1024, 1024];
         HALLOWEEN
     </h2>
     <Image
-        class="w-2/4 md:w-1/5"
+        class="w-5/12 md:w-1/5"
         src={catImage}
         widths={widths}
         loading="eager"
@@ -53,7 +53,7 @@ const widths = [1024, 1024];
             20:00
         </h3>
         <p class="-mt-4">
-            Ortiguilla 505, Camino Real
+            <a href="https://maps.app.goo.gl/BNZebupxA3qqrRzFA">Ortiguilla 505, Camino Real</a>
         </p>
         <h4 class="mt-2">
             COVER $20 - SHOT DE BIENVENIDA
