cambios de estilo para corregir medidas

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -3,7 +3,7 @@ import { Icon } from "astro-icon/components";
 import BackgroundImage from "~/components/background-footer-image.astro";
 ---
 
-<footer class="relative flex h-36 items-center justify-center">
+<footer class="relative flex flex-col h-36 items-center justify-center">
   <div class="absolute inset-0 overflow-hidden">
     <BackgroundImage />
   </div>
@@ -14,7 +14,7 @@ import BackgroundImage from "~/components/background-footer-image.astro";
           href="https://github.com/LurchingDart/INFERNO"
       >
         <span class="sr-only">View source on GitHub</span>
-        <Icon class="size-full" name="mdi:github" />
+        <Icon class="size-2/4" name="mdi:github" />
       </a>
       <a
           class="flex size-16 items-center justify-center"
@@ -23,14 +23,15 @@ import BackgroundImage from "~/components/background-footer-image.astro";
         <span class="sr-only">
           Reach me on Instagram
         </span>
-        <Icon class="size-full" name="mdi:instagram" />
+        <Icon class="size-2/4" name="mdi:instagram" />
       </a>
     </div>
-    <div>
-        <p class="text-center text-white text-xs">
-          Designed by <a href="https://github.com/LurchingDart" class="text-[#863B87]">Luis Alferez</a>
-        </p>
-    </div>
+
+  </div>
+  <div class="relative w-full">
+    <p class="text-center text-black text-lg">
+      Designed by <a href="https://github.com/LurchingDart" class="text-[#863B87]">Luis Alferez</a>
+    </p>
   </div>
 </footer>
 
