--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -30,7 +30,7 @@ import BackgroundImage from "~/components/background-footer-image.astro";
   </div>
   <div class="relative w-full">
     <p class="text-center text-black text-lg">
-      Designed by <a href="https://github.com/LurchingDart" class="text-[#863B87]">Luis Alferez</a>
+      Designed by <a href="https://github.com/LurchingDart" class="text-[#863B87]">★ Luis Alferez ★</a>
     </p>
   </div>
 </footer>
