--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import "~/styles/index.css";
 const { generator, site } = Astro;
 const image = new URL("social.jpg", site);
 const description =
-  "INFERNO HALLOWEEN - Una fiesta de disfraces en Ortiguilla 505, Camino Real. Cover $20 - Shot de bienvenida.";
+  "INFERNO HALLOWEEN - Una fiesta de Halloween que no olvidarás (o sí, tampoco es proyecto x) pero hey, is Halloween Partyyyy!";
 ---
 
 <!doctype html>
