--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -13,7 +13,7 @@
   --color-secondary: theme("colors.indigo.400");
   --color-text: theme("colors.black");
   --color-text-offset: theme("colors.gray.400");
-  --color-background: theme("colors.gray.900");
+  --color-background: 0 0% 100%;
   --color-background-offset: theme("colors.gray.800");
   --color-border: theme("colors.gray.50" / 10%);
 }
