--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,34 +38,9 @@ const description = "This website was used before for something creepy and scary
     <meta property="twitter:image" content={image}>
     <meta name="twitter:image:alt" content="Creepy Skull" />
 
-
-
-    <!-- initialize theme -->
-    <script is:inline>
-      const themeSaved = localStorage.getItem("theme");
-
-      if (themeSaved) {
-        document.documentElement.dataset.theme = themeSaved;
-      } else {
-        const prefersDark = window.matchMedia(
-          "(prefers-color-scheme: dark)",
-        ).matches;
-        document.documentElement.dataset.theme = prefersDark ? "dark" : "light";
-      }
-
-      window
-        .matchMedia("(prefers-color-scheme: dark)")
-        .addEventListener("change", (event) => {
-          if (!localStorage.getItem("theme")) {
-            document.documentElement.dataset.theme = event.matches
-              ? "dark"
-              : "light";
-          }
-        });
-    </script>
   </head>
   <body
-    class="h-full overflow-x-hidden bg-default text-default text-base selection:bg-secondary selection:text-red-300"
+    class="h-full overflow-x-hidden text-default text-base selection:bg-secondary selection:text-red-300"
   >
     <Splash />
     <Footer />
