--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -9,10 +9,7 @@ import BackgroundImage from "~/components/background-footer-image.astro";
   </div>
   <div class="relative w-full">
     <p class="text-center text-black text-lg">
-      <a href="https://instagram.com/alfxrxz" class="text-[#863B87]">Alfxrxz ★</a>
-    </p>
-    <p class="text-center text-black text-lg">
-      <a href="https://instagram.com/santigumo" class="text-[#863B87]"> Santigumo</a>
+      <a href="https://instagram.com/alfxrxz" class="text-[#863B87]">Alfxrxz ★</a><a href="https://instagram.com/santigumo" class="text-[#863B87]"> Santigumo</a>
     </p>
   </div>
 </footer>
