--- a/src/components/splash.astro
+++ b/src/components/splash.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets";
-import skullImage from "~/assets/skull.png";
+import wall2 from "~/assets/wall-02.png";
 import EyesXEyes from "../assets/eyes.png";
 
 const widths = [1024, 1024];
@@ -8,24 +8,57 @@ const widths = [1024, 1024];
 
 <section class="relative flex flex-col h-full items-center justify-center">
   <Image
-      class="absolute inset-0 -z-10 opacity-80 object-cover h-full w-screen max-w-[3840px] "
+      class="absolute inset-0 -z-10 opacity-70 object-cover h-full w-screen max-w-[3840px] "
       src={EyesXEyes}
       widths={widths}
       loading="eager"
       alt="Background image"
   />
   <div
-      class="flex h-full flex-col place-items-center justify-between space-y-10"
+      class="flex h-full flex-col place-items-center justify-between space-y-10 text-center text-xl"
   >
     <div></div>
-    <div>
-      <h1 class="text-8xl">INFERNO</h1>
-      <p class="text-4xl">Something is coming...</p>
-      <p class="text-4xl">25 . 04 . 25</p>
+    <div class="flex flex-col gap-4">
+      <div>
+        <h1 class="text-7xl">INFERNO</h1>
+      </div>
+      <div class="flex flex-col gap-4">
+        <p class="">25.04.25</p>
+        <p class="">COVER $30 / $70</p>
+      </div>
+      <div>
+        <p class="">
+          <a href="https://maps.app.goo.gl/XSbY6vawSgb8rzrL6">CLICK ME</a>
+        </p>
+      </div>
     </div>
     <div class="">
-      <p class="text-4xl">Mas info pronto</p>
+      <p>V</p>
+      <p>V</p>
+      <p>V</p>
     </div>
+  </div>
+</section>
+<section class="h-fit flex flex-col gap-6 p-6">
+  <div>
+      <h1 class="text-2xl">
+        COVER:<br/><br/>
+      </h1>
+      <span>
+        $30 = Shot de bienvenida + agua loca hasta que se acabe + refrescos + botanas <br/><br/>
+        $70 = Todo lo anterior + 1 brownie mágico 🍃 y acceso al borrego y la maría 🍁
+    </span>
+  </div>
+  <div>
+    <h1 class="text-2xl">
+      EXTRAS:<br/><br/>
+    </h1>
+    <span>
+      / El pisto que quieras mamar te lo traes tú. <br/><br/>
+      / Conectamos Tripi 👁 pregunta si te interesa. <br/><br/>
+      / Si quieres más brownie o algo de mostaza, pregunta. <br/><br/>
+      / Llevar lentes bellakos como estos: <a href="https://inferno.wtf/lentes.png" class="underline">click me</a> <br/><br/>
+    </span>
   </div>
 </section>
 
@@ -40,18 +73,15 @@ const widths = [1024, 1024];
 <style>
   h1 {
     color: #B53146;
-    font-family: "New Rocker", cursive;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
+    font-family: "SpaceArmor", cursive;
+
   }
   p {
-    color: #B53146;
-    text-align: center;
-    font-family: "Grenze Gotisch Variable", cursive;
-    font-size: 32px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
+    color: #D12F31;
+    font-family: "SpaceArmor", cursive;
+  }
+  span {
+    color: #D12F31;
+    font-family: "New Rocker", cursive;
   }
 </style>
