feat: add SpeedInsights component to index.astro for performance analysis

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import '@fontsource/new-rocker';
 import '@fontsource-variable/grenze-gotisch';
 import Footer from "~/components/footer.astro";
 import Splash from "~/components/splash.astro";
+import  SpeedInsights  from "@vercel/speed-insights/astro"
 
 import "~/styles/index.css";
 
@@ -44,5 +45,6 @@ const description = "This website was used before for something creepy and scary
   >
     <Splash />
     <Footer />
+    <SpeedInsights/>
   </body>
 </html>
