feat: improve footer layout and add ambient declaration for astro:assets module

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,15 +1,16 @@
 ---
-import { Icon } from "astro-icon/components";
 import BackgroundImage from "~/components/background-footer-image.astro";
 ---
 
-<footer class="relative flex flex-col h-20 items-center justify-center">
+<footer class="relative flex h-20 flex-col items-center justify-center">
   <div class="absolute inset-0 overflow-hidden">
     <BackgroundImage />
   </div>
   <div class="relative w-full">
     <p class="text-center text-black text-lg">
-      <a href="https://instagram.com/alfxrxz" class="text-[#863B87]">Alfxrxz ★</a><a href="https://instagram.com/santigumo" class="text-[#863B87]"> Santigumo</a>
+      <a href="https://instagram.com/alfxrxz" class="text-[#863B87]">
+        Alfxrxz ★
+      </a>
     </p>
   </div>
 </footer>
