chore: update fonts and splash h1 size

--- a/src/components/splash.astro
+++ b/src/components/splash.astro
@@ -5,7 +5,7 @@ import EyesXEyes from "../assets/eyes.png";
 const widths = [1024, 1024];
 ---
 
-<section class="relative flex h-full flex-col items-center justify-center">
+<section class="relative flex min-h-svh">
   <Image
     class="absolute inset-0 -z-10 h-full w-screen max-w-[3840px] object-cover opacity-60"
     src={EyesXEyes}
@@ -13,79 +13,14 @@ const widths = [1024, 1024];
     loading="eager"
     alt="Background image"
   />
-  <div
-    class="flex h-full flex-col place-items-center justify-between space-y-10 text-center text-xl"
-  >
-    <div></div>
-    <div class="flex flex-col gap-4">
-      <div>
-        <h1 class="text-6xl">INFERNO</h1>
-      </div>
-      <div class="flex flex-col gap-4">
-        <p class="">25.04.25</p>
-        <p class="">COVER $30 / $70</p>
-      </div>
-      <div>
-        <p class="">
-          <a href="https://maps.app.goo.gl/XSbY6vawSgb8rzrL6">CLICK ME</a>
-        </p>
-      </div>
-    </div>
-    <div class="">
-      <p>V</p>
-      <p>V</p>
-      <p>V</p>
-    </div>
+  <div class="flex flex-1 items-center justify-center">
+    <h1 class="text-[8rem] sm:text-9xl">INFERNO</h1>
   </div>
 </section>
-<section class="flex h-fit flex-col gap-6 p-6">
-  <div>
-    <h1 class="text-2xl">
-      COVER:<br /><br />
-    </h1>
-    <span>
-      $30 = Shot de bienvenida + agua loca hasta que se acabe + refrescos +
-      botanas <br /><br />
-      $70 = Todo lo anterior + 1 brownie mágico 🍃 y acceso al borrego y la maría
-      🍁
-    </span>
-  </div>
-  <div>
-    <h1 class="text-2xl">
-      EXTRAS:<br /><br />
-    </h1>
-    <span>
-      / El pisto que quieras mamar te lo traes tú. <br /><br />
-      / Conectamos Tripi 👁 pregunta si te interesa. <br /><br />
-      / Si quieres más brownie o algo de mostaza, pregunta. <br /><br />
-      / Llevar lentes bellakos como estos: <a
-        href="https://inferno.wtf/lentes.png"
-        class="underline">click me</a
-      >
-      <br /><br />
-    </span>
-  </div>
-</section>
-
-<noscript>
-  <style>
-    #splash-bg-fallback {
-      display: block;
-    }
-  </style>
-</noscript>
 
 <style>
   h1 {
     color: #b53146;
-    font-family: "SpaceArmor", cursive;
-  }
-  p {
-    color: #d12f31;
-    font-family: "SpaceArmor", cursive;
-  }
-  span {
-    color: #d12f31;
-    font-family: "New Rocker", cursive;
+    font-family: "BootzyTM", cursive;
   }
 </style>
