--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -1,6 +1,6 @@
 [data-theme="dark"] {
-  --color-primary: #B53146;
-  --color-secondary: #D12F31;
+  --color-primary: #DA0004;
+  --color-secondary: #AA1919s;
   --color-text: #EAEAEA;
   --color-text-offset: #B0B0B0;
   --color-background: #000000;
